--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -42,6 +42,12 @@ $small-breakpoint: 550px;
   font-size: 1rem;
   cursor: pointer;
   font-weight: bold;
+  
+  &:hover,
+  &:focus {
+    background-color: $pink;
+    color: $white;
+  }
 }
 
 .c-Button:disabled {
@@ -55,7 +61,17 @@ $small-breakpoint: 550px;
   text-decoration: none;
   
   &:hover {
+    color: $pink;
     text-decoration: underline;
+  }
+}
+
+.c-Link--special {
+  color: $pink;
+  
+  &:hover {
+    color: $black;
+    text-decoration: none;
   }
 }
 
@@ -103,4 +119,12 @@ $small-breakpoint: 550px;
 // Utility styles
 .u-Mbm {
   margin-bottom: 1rem;
+}
+
+.c-ContactDetail {
+  border: 3px solid $pink;
+  border-radius: 8px;
+  background: #f9f9f9;
+  margin: 2rem 0;
+  padding: 1rem;
 }
